# typecast-python

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
docker/: Dockerfile
examples/: advanced.py  async_example.py  simple.py  voices_example.py
spec/: openapi.json
src/tests/: test_speech_synthesis.py
src/typecast/: __init__.py  async_client.py  client.py  conf.py  exceptions.py  models.py
src/typecast/models/: __init__.py  tts.py  tts_wss.py  voices.py
tests/: conftest.py  test_async_client.py  test_error_handling.py  test_integration.py  test_integration_tts.py  test_integration_voices.py  test_language_code.py  test_mock_tts.py
