[tool.poetry]
name = "typecast"
version = "0.1.0"
description = "typecast api"
authors = ["Juncheol Cho <zironycho@neosapience.com>"]
readme = "README.md"
packages = [
    { include = "typecast", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
