[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "typecast-sdk"
version = "0.1.0"
description = "Typecast SDK for Python"
authors = ["Neosapience <help@typecast.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "typecast", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = ">=3.8.0"
requests = ">=2.28.0"
pydantic = ">=2.0.0"
sseclient-py = ">=1.7.2"
websockets = ">=10.0"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
