[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typecast"
version = "0.1.2"
description = "Typecast SDK for Python - Convert text to lifelike speech using AI-powered voices"
authors = [
    {name = "Neosapience", email = "help@typecast.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["typecast", "tts", "text-to-speech", "ai", "voice", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "sseclient-py>=1.7.2",
    "websockets>=10.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://typecast.ai"
Documentation = "https://typecast.ai/docs/overview"
Repository = "https://github.com/neosapience/typecast-python"
Issues = "https://github.com/neosapience/typecast-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/typecast"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
